# conda-sigstore

./: .gitignore  .pre-commit-config.yaml  NOTES.md  README.md  pyproject.toml
.github/workflows/: tests.yml
conda_sigstore/: cache.py  constants.py  hooks.py  settings.py  verifier.py
notes/: conda-sigstore-plugin-overview.md
tests/: conftest.py  test_cache.py  test_verifier.py
tests/integration/: conftest.py  test_benchmark.py  test_install.py
