[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "conda-sigstore"
version = "0.1.0"
description = "Sigstore verification for conda packages"
requires-python = ">=3.11"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.entry-points.conda]
conda-sigstore = "conda_sigstore.hooks"

[tool.setuptools]
packages = ["conda_sigstore"]

[tool.pixi.workspace]
channels = ["conda-forge", "https://prefix.dev/thath"]
platforms = ["osx-arm64", "linux-aarch64"]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.dependencies]
conda = ">=26.5.0"
py-sigstore = ">=0.11.0,<0.12"
platformdirs = ">=4.10.1,<5"

[tool.pixi.feature.dev.dependencies]
darker = "*"
flake8 = "*"
mypy = "*"
pyupgrade = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
prek = "*"

[tool.pixi.pypi-dependencies]
conda-sigstore = { path = ".", editable = true }

[tool.pixi.tasks]
